--- a/contacts-server/package.json
+++ b/contacts-server/package.json
@@ -7,7 +7,8 @@
     "test": "NODE_ENV=test node --test",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV nodemon index.js",
-    "build:ui": "rm -rf build && cd ../contacts/ && npm run build && cp -r build ../contacts-server"
+    "build:ui": "cd ../contacts && npm install && npm run build && cp -r build ../contacts-server",
+    "deploy": "npm run build:ui && npm run start"
   },
   "author": "",
   "license": "ISC",
