--- a/contacts-server/package.json
+++ b/contacts-server/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_ENV=test node --test",
     "start": "NODE_ENV=production node index.js",
     "dev": "NODE_ENV nodemon index.js",
-    "build:ui": "cd ../contacts && npm install && npm run build && cp -r build ../contacts-server",
+    "build:ui": "cd ../contacts && npm install && npm run build && npm run start",
     "deploy": "npm run build:ui && npm run start"
   },
   "author": "",
